# games50-rust

./: README.md
.github/workflows/: ci.yml  rust.yml
fbird/: Cargo.toml
fbird/src/: constants.rs  main.rs  traits.rs
fbird/src/states/: background_state.rs  foreground_state.rs  mod.rs
fbird/src/states/game_states/: countdown_screen_state.rs  game_state.rs  mod.rs  start_screen_state.rs  utils.rs
fbird/src/states/game_states/game_state/: bird.rs  game_state.rs  mod.rs
pong/: Cargo.toml
pong/src/: constants.rs  main.rs  shapes.rs  traits.rs
pong/src/states/: countdownstate.rs  gameoverstate.rs  gamestate.rs  mod.rs  shapes.rs  startscreenstate.rs  utils.rs
pong/src/static/: index.html
