[package]
name = "pong"
version = "0.1.0"
authors = ["Ivan Zub <zub.ivan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpython = "0.2"
ggez = "0.5.1"
rand = "0.7.2"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]