[package]
name = "pong"
version = "0.1.0"
authors = ["Ivan Zub <zub.ivan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ggez = "0.5.1"
rand = "0.7.2"

[target.wasm32-unknown-unknown.dependencies]
good-web-game = { git = "https://github.com/not-fl3/good-web-game", features = ["nalgebra"] }
rand = { version = "0.7", features = ["stdweb"] }